src/test/deca/context/invalid/sum-incompatible0.des
The two operands are not of the compatible types for the binary Operation